--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 .home-page {
-    background-color: #0b0f2f;
+  background-color: #0b0f2f;
 }
 
 @keyframes marquee {
@@ -17,3 +17,40 @@
   width: max-content;
   animation: marquee 4.5s linear infinite;
 }
+
+.footer {
+  display: flex;
+  gap: 10px;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2.5rem;
+  background-color: #0b0f2f;
+  font-size: 1rem;
+  color: white;
+}
+.icon {
+  display: grid;
+  flex-direction: column;
+  gap: 10px;
+}
+
+
+
+.social-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* 3 yuxarı, 3 aşağı */
+  grid-template-rows: repeat(2, auto);
+  gap: 12px;
+  align-items: center;
+  justify-items: center;
+}
+
+.social-grid a {
+  font-size: 20px;
+  transition: transform 0.2s ease, color 0.2s ease;
+}
+
+.social-grid a:hover {
+  transform: scale(1.15);
+}
+
